# DTE_Core_Engine

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.local.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2026_5_9_1149-4b2c91786e36_init_mysql_tables.py  2026_6_16_0001_add_use_exclusive_c14n.py  2026_6_17_add_caf_ambiente.py  (+2 more)
app/: __init__.py  config.py  main.py
app/api/: deps.py
scratch/: boleta_131.xml  decode_xml.py  xmldsignature_v10.xsd
tests/: conftest.py  test_dte_send.py
tools/: _dbg_call_builder.py  _debug_extract.py  _debug_parse_doc.py  accepted_extracted.xml  accepted_override.json  auto_pipeline.py  auto_pipeline_loop.py  backfill_caf_ambiente.py  check_certificate.py  check_certificate_empresa.py  check_diff.py  compare_accepted_doc_extracted_diff.txt  compare_bytes.py  compare_diff.txt  compare_extracted_bytes.py  compare_extracted_vs_accepted.txt  compare_generated_vs_accepted.txt  compare_multipart_with_accepted.py  compare_normalized.py  compare_normalized_diff.txt  compare_summary.txt  compare_xml_diff.txt  dbg_envio_output.xml  debug_roundtrip_sign_verify.py  debug_sweep_sign_verify.py  debug_verify_signature.py  envio_template_with_doc.xml  expected_extracted.xml  generate_and_compare_builder.py  generate_test_boleta.py  generated_envio_from_accepted_doc.xml  generated_envio_from_builder.xml  generated_extracted_from_accepted_doc.xml  generated_extracted_from_builder.xml  get_dte_by_id.py  inspect_cafs.py  last_multipart.txt  normalize_and_diff.py  query_track_status.py  query_tracks.py  (+26 more)
(+48 files in other folders)
